--- a/src/css/login.css
+++ b/src/css/login.css
@@ -1,12 +1,23 @@
+body {
+    width: 100vw;
+    height: 100vh;
+}
+#root {
+    width: 100%;
+    height: 100%;
+}
 .login {
     width: 100%;
-    /* height: 110vh; */
-    /* filter: invert(100%); */
+    height: 100%;
+    transition: .5s;
     background-color: #fff;
+}
+.login > * {
+    transition: .5s;
 }
 .logo {
     margin: 0 auto;
-    margin-top: 50%;
+    padding-top: 50%;
     position: relative;
     text-align: center;
     font-size: 6vh;
@@ -44,4 +55,14 @@
     text-align: center;
     font-size: 3vw;
     margin-top: 2vw;
+}
+/* Intro */
+.intro {
+    filter: invert(100%);
+}
+.intro2 > .logo {
+    padding-top: 45vh;
+}
+.intro3 > :not(.logo) {
+    opacity: 0;   
 }
