--- a/src/css/login.css
+++ b/src/css/login.css
@@ -6,14 +6,35 @@ body {
     width: 100%;
     height: 100%;
 }
+/* user */
+.user {
+    width: 100%;
+    height: 100%;
+}
+.user_btn {
+    margin: 0 auto;
+    width: 74%;
+    padding: 3%;
+    text-align: center;
+    color: #fff;
+    font-weight: bold;
+    background-color: #333;
+    border-radius: .6rem;
+    margin-top: 7vw;
+}
+.user_signup {
+    margin: 0 auto;
+    width: 80%;
+    text-align: center;
+    font-size: 3vw;
+    margin-top: 2vw;
+}
+/* login */
 .login {
     width: 100%;
     height: 100%;
     transition: .5s;
     background-color: #fff;
-}
-.login > * {
-    transition: .5s;
 }
 .logo {
     margin: 0 auto;
@@ -38,23 +59,11 @@ body {
     border-radius: .6rem;
     margin-top: 5vw;
 }
-.login_btn {
-    margin: 0 auto;
-    width: 74%;
-    padding: 3%;
-    text-align: center;
-    color: #fff;
-    font-weight: bold;
-    background-color: #333;
-    border-radius: .6rem;
-    margin-top: 7vw;
-}
-.login_signup {
-    margin: 0 auto;
-    width: 80%;
-    text-align: center;
-    font-size: 3vw;
-    margin-top: 2vw;
+/* signUp */
+.signup {
+    width: 100%;
+    height: 100%;
+    padding-top: 50%;
 }
 /* Intro */
 .intro {
@@ -65,4 +74,7 @@ body {
 }
 .intro3 > :not(.logo) {
     opacity: 0;   
+}
+.login > * {
+    transition: .5s;
 }
