--- a/src/css/login.css
+++ b/src/css/login.css
@@ -33,7 +33,7 @@ body {
 .login {
     width: 100%;
     height: 100%;
-    transition: .5s;
+    /* transition: .5s; */
     background-color: #fff;
 }
 .logo {
@@ -81,6 +81,6 @@ body {
 .intro3 > :not(.logo) {
     opacity: 0;   
 }
-.login > * {
+.intro4 > *, .intro4 {
     transition: .5s;
 }
