--- a/src/css/login.css
+++ b/src/css/login.css
@@ -60,9 +60,9 @@ body {
     margin-top: 5vw;
     background-color: #f1f1f1;
 }
-.input > label {
+.input > .input_label {
     font-size: .8rem;
-    color: #333;
+    /* color: #333; */
     padding-left: 3%;
 }
 /* signUp */
@@ -70,6 +70,12 @@ body {
     width: 100%;
     height: 100%;
     padding-top: 30%;
+}
+.red {
+    color: #ff5555;
+}
+.green {
+    color: #55ff55;
 }
 /* Intro */
 .intro {
